--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-cors = "0.6"
+anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 env_logger = "0.9"
